removed unsed lines